# iabgpp-rs

./: CHANGELOG.md  Cargo.toml  README.md  crates-io.md  resources.md
examples/: basic.rs  print.rs
gpptool/: Cargo.toml
gpptool/src/: main.rs
iab_gpp/: Cargo.toml  README.md  build.rs
iab_gpp/examples/: basic.rs  json.rs  print.rs
iab_gpp/src/: lib.rs
iab_gpp/src/core/: base64.rs  fibonacci.rs  mod.rs
iab_gpp/src/sections/: mod.rs  tcfcav1.rs  tcfeuv1.rs  tcfeuv2.rs  us_common.rs  usca.rs  usco.rs  usct.rs  usde.rs  usfl.rs  usia.rs  usin.rs  usky.rs  usmd.rs  usmn.rs  usmt.rs  usnat.rs  usne.rs  usnh.rs  usnj.rs  usor.rs  uspv1.rs  usri.rs  ustn.rs  ustx.rs  usut.rs  usva.rs
iab_gpp/src/v1/: mod.rs
iab_gpp/tests/: decode_tests.rs
iab_gpp/tests/common/: mod.rs
iab_gpp/tests/data/: tcfcav1_basic.json  tcfcav1_basic.txt  tcfcav1_full.json  tcfcav1_full.txt  tcfcav1_with_publisher_purposes.json  tcfcav1_with_publisher_purposes.txt  tcfeuv1_basic.json  tcfeuv1_basic.txt  tcfeuv2_core_only.json  tcfeuv2_core_only.txt  tcfeuv2_with_all_segments_disclosed_vendors_first.json  tcfeuv2_with_all_segments_disclosed_vendors_first.txt  tcfeuv2_with_all_segments_publisher_purposes_first.json  tcfeuv2_with_all_segments_publisher_purposes_first.txt  tcfeuv2_with_allowed_vendors.json  tcfeuv2_with_allowed_vendors.txt  tcfeuv2_with_disclosed_vendors.json  tcfeuv2_with_disclosed_vendors.txt  tcfeuv2_with_publisher_purposes.json  tcfeuv2_with_publisher_purposes.txt  usca_not_applicable.json  usca_not_applicable.txt  usca_opted_out.json  usca_opted_out.txt  usca_with_gpc.json  usca_with_gpc.txt  usco_not_applicable.json  usco_not_applicable.txt  usco_opted_out.json  usco_opted_out.txt  usco_with_gpc.json  usco_with_gpc.txt  usct_not_applicable.json  usct_not_applicable.txt  usct_opted_out.json  usct_opted_out.txt  usct_with_gpc.json  usct_with_gpc.txt  usnat_v1_not_applicable.json  usnat_v1_not_applicable.txt  (+14 more)
iab_gpp_derive/: Cargo.toml  README.md
iab_gpp_derive/src/: enum_variant_attr.rs  field_attr.rs  from_bit_stream.rs  from_data_reader.rs  lib.rs  optional_segment_parser.rs  struct_attr.rs
src/: lib.rs
src/core/: base64.rs  fibonacci.rs  mod.rs
src/sections/: mod.rs  tcfcav1.rs  tcfeuv1.rs  tcfeuv2.rs  us_common.rs  usca.rs  usco.rs  usct.rs  usnat.rs  uspv1.rs  usut.rs  usva.rs
src/v1/: mod.rs
