[package]
name = "iab-gpp"
version = "0.0.0"
edition = "2021"
authors = ["Marc Noirot <marc.noirot@gmail.com>"]
description = "IAB GPP Consent string implementation"
homepage = "https://github.com/noirotm/iabgpp-rs"
repository = "https://github.com/noirotm/iabgpp-rs"
license = "Apache-2.0"
keywords = ["tcf", "iab", "gpp", "decode"]
categories = ["parser-implementations"]
documentation = "https://docs.rs/iab_gpp/"
readme = "README.md"

[dependencies]
base64 = "0.21.0"
bitstream-io = "1.6.0"
fnv = "1.0.3"
num-iter = "0.1.43"
num-traits = "0.2.15"
thiserror = "1.0.40"
