[package]
name = "iab_gpp"
version = "0.1.2"
rust-version = "1.89.0"
edition = "2024"
authors = ["Marc Noirot <marc.noirot@gmail.com>"]
description = "IAB GPP Consent String implementation"
homepage = "https://github.com/noirotm/iabgpp-rs"
repository = "https://github.com/noirotm/iabgpp-rs"
license = "Apache-2.0"
keywords = ["tcf", "iab", "gpp", "decode"]
categories = ["parser-implementations"]
documentation = "https://docs.rs/iab_gpp/"
readme = "crates-io.md"
build = "build.rs"

[dependencies]
bitstream-io = "4.3.0"
fnv = "1.0.7"
iab_gpp_derive = { version = "0", path = "../iab_gpp_derive" }
num-derive = "0.4.0"
num-iter = "0.1.43"
num-traits = "0.2.16"
serde = { version = "1.0.217", features = ["derive"], optional = true }
strum_macros = "0.27.2"
thiserror = "2.0.12"

[dev-dependencies]
test-case = "3.2.1"
serde = "1.0.217"
serde_json = "1.0.137"
assert-json-diff = "2.0.2"

[build-dependencies]
prettyplease = "0.2.37"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
walkdir = "2.5.0"

[features]
serde = ["dep:serde"]
